--- a/index.html
+++ b/index.html
@@ -106,8 +106,10 @@
     .logo {
       width: 110px;
       height: auto;
-      margin-bottom: 15px;
-      filter: brightness(0) invert(1);
+      margin-bottom: 18px;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
     }
 
     .header h1 {
@@ -312,13 +314,8 @@
 
   <div class="container">
     <div class="header">
-      <!-- LOGO OFICIAL DE UNIVER MILENIUM (SVG) -->
-      <svg class="logo" width="120" height="140" viewBox="0 0 120 140" xmlns="http://www.w3.org/2000/svg">
-        <path fill="#ffffff" d="M60 10 L10 90 L60 130 L110 90 Z"/>
-        <path fill="#002856" d="M60 20 L20 90 L60 120 L100 90 Z"/>
-        <path fill="#ffffff" d="M60 35 C45 55, 40 75, 50 95 C60 115, 75 110, 80 90 C85 70, 80 50, 60 35 Z 
-                                 M60 45 C70 60, 72 80, 65 95 C58 110, 48 105, 50 90 C52 75, 55 60, 60 45 Z"/>
-      </svg>
+      <!-- TU IMAGEN LOCAL -->
+      <img src="uni.png" alt="Universidad Univer Milenium" class="logo">
       <h1>Boletos Graduación</h1>
       <p>Sistema oficial 2025</p>
     </div>
@@ -406,10 +403,10 @@
       <div id="message" class="message"></div>
     </div>
 
-    <footer>© 2025 Graduación • Universidad Unver Milenium</footer>
+    <footer>© 2025 Graduación • Universidad Univer Milenium</footer>
   </div>
 
-  <!-- TU SCRIPT ORIGINAL COMPLETO (SIN CAMBIAR NADA) -->
+  <!-- TU SCRIPT ORIGINAL COMPLETO (100% SIN CAMBIOS) -->
   <script>
     const particlesContainer = document.getElementById('particles');
     const particleCount = window.innerWidth < 500 ? 40 : 70;
