--- a/index2.html
+++ b/index2.html
@@ -6,70 +6,293 @@
   <title>Mis Boletos • Graduación 2025</title>
   <link rel="manifest" href="manifest.json">
   <link rel="apple-touch-icon" href="icon-192.png">
-  <meta name="theme-color" content="#c41b2a">
+  <meta name="theme-color" content="#002856">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Bebas+Neue&display=swap" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/qrcode@1.5.0/build/qrcode.min.js"></script>
   <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
 
   <style>
     :root {
-      --red-dark: #8B0000;
-      --red-main: #c41b2a;
-      --gold: #FFD700;
-      --green: #10b981;
-      --gray: #f1f5f9;
+      --azul-marino: #002856;
+      --azul-institucional: #0055A5;
+      --blanco: #ffffff;
+      --negro: #1a1a1a;
+      --gris-claro: #f8f9fc;
+      --verde-exito: #10b981;
+      --rojo-error: #ef4444;
     }
+
     * { margin: 0; padding: 0; box-sizing: border-box; }
+
     body {
       font-family: 'Poppins', sans-serif;
-      background: linear-gradient(-45deg, #667eea, #764ba2, #f093fb, #f5576c);
+      background: linear-gradient(-45deg, #001f3f, #002856, #003366, #0055A5);
       background-size: 400% 400%;
-      animation: gradientBG 15s ease infinite;
+      animation: gradientBG 18s ease infinite;
       min-height: 100vh;
       padding: 20px;
       display: flex;
       justify-content: center;
       align-items: center;
     }
-    @keyframes gradientBG { 0% { background-position: 0% 50%; } 50% { background-position: 100% 50%; } 100% { background-position: 0% 50%; } }
 
-    .container { max-width: 500px; width: 100%; background: rgba(255,255,255,0.15); backdrop-filter: blur(20px); border-radius: 28px; overflow: hidden; box-shadow: 0 20px 50px rgba(0,0,0,0.4); }
-    .header { background: linear-gradient(135deg, #6366f1, #ec4899); color: white; text-align: center; padding: 40px 20px; }
-    .header h1 { font-size: clamp(28px, 6vw, 36px); font-weight: 700; margin-bottom: 8px; }
-    .content { padding: 40px 30px; background: rgba(255,255,255,0.97); color: #1e1b4b; }
-    .profile { background: var(--gray); padding: 20px; border-radius: 16px; text-align: center; margin-bottom: 25px; box-shadow: 0 8px 25px rgba(0,0,0,0.1); }
-    .profile h3 { color: var(--red-main); font-size: 24px; margin-bottom: 10px; }
-    .inventory { display: flex; justify-content: space-around; margin-bottom: 30px; text-align: center; }
-    .inventory div { background: #f1f5f9; padding: 16px; border-radius: 14px; width: 48%; box-shadow: 0 4px 12px rgba(0,0,0,0.1); }
-    .inventory span { font-size: 26px; font-weight: bold; color: #6366f1; }
-    .option { background: white; padding: 25px; border-radius: 16px; margin: 20px 0; box-shadow: 0 8px 25px rgba(0,0,0,0.12); transition: transform 0.3s; }
-    .option:hover { transform: translateY(-6px); }
-    button { width: 100%; padding: 16px; background: linear-gradient(90deg, #6366f1, #ec4899); color: white; border: none; border-radius: 12px; font-size: 18px; font-weight: 600; cursor: pointer; margin-top: 15px; transition: all 0.4s; }
-    button:hover { transform: translateY(-4px); box-shadow: 0 15px 30px rgba(99,102,241,0.4); }
-    button.delete { background: #ef4444; }
-    button.ticket { background: #10b981; }
-    .message { margin-top: 20px; padding: 15px; border-radius: 12px; text-align: center; font-weight: 600; display: none; }
-    .message.success { background: #d4edda; color: #10b981; }
-    .message.error { background: #f8d7da; color: #ef4444; }
+    @keyframes gradientBG {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
+
+    .container {
+      max-width: 500px;
+      width: 100%;
+      background: rgba(255, 255, 255, 0.95);
+      backdrop-filter: blur(20px);
+      border-radius: 28px;
+      overflow: hidden;
+      box-shadow: 0 25px 60px rgba(0, 0, 0, 0.4);
+      border: 1px solid rgba(0, 85, 165, 0.15);
+    }
+
+    .header {
+      background: linear-gradient(135deg, var(--azul-marino), var(--azul-institucional));
+      color: white;
+      text-align: center;
+      padding: 40px 20px 30px;
+    }
+
+    .logo {
+      width: 110px;
+      height: auto;
+      margin-bottom: 15px;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    .header h1 {
+      font-size: clamp(28px, 6vw, 36px);
+      font-weight: 700;
+      margin-bottom: 8px;
+    }
+
+    .header p {
+      font-size: 17px;
+      opacity: 0.95;
+    }
+
+    .content {
+      padding: 40px 30px;
+      background: white;
+      color: var(--negro);
+    }
+
+    .profile {
+      background: var(--gris-claro);
+      padding: 22px;
+      border-radius: 18px;
+      text-align: center;
+      margin-bottom: 25px;
+      box-shadow: 0 8px 25px rgba(0, 0, 0, 0.1);
+      border-left: 5px solid var(--azul-institucional);
+    }
+
+    .profile h3 {
+      color: var(--azul-marino);
+      font-size: 24px;
+      margin-bottom: 8px;
+    }
+
+    .inventory {
+      display: flex;
+      justify-content: space-around;
+      margin-bottom: 30px;
+      text-align: center;
+      gap: 15px;
+    }
+
+    .inventory div {
+      background: white;
+      padding: 18px;
+      border-radius: 16px;
+      flex: 1;
+      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
+      border: 2px solid #e0e7ff;
+    }
+
+    .inventory h3 {
+      font-size: 14px;
+      color: var(--negro);
+      margin-bottom: 8px;
+    }
+
+    .inventory span {
+      font-size: 28px;
+      font-weight: bold;
+      color: var(--azul-institucional);
+    }
+
+    .option {
+      background: white;
+      padding: 28px;
+      border-radius: 18px;
+      margin: 22px 0;
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.12);
+      border: 1px solid #e0e7ff;
+      transition: all 0.3s ease;
+    }
+
+    .option:hover {
+      transform: translateY(-8px);
+      box-shadow: 0 15px 40px rgba(0, 85, 165, 0.2);
+    }
+
+    .option h3 {
+      color: var(--azul-marino);
+      margin-bottom: 10px;
+      font-size: 20px;
+    }
+
+    button {
+      width: 100%;
+      padding: 16px;
+      background: linear-gradient(90deg, var(--azul-marino), var(--azul-institucional));
+      color: white;
+      border: none;
+      border-radius: 14px;
+      font-size: 18px;
+      font-weight: 600;
+      cursor: pointer;
+      margin-top: 15px;
+      transition: all 0.4s;
+      box-shadow: 0 10px 25px rgba(0, 85, 165, 0.3);
+    }
+
+    button:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 18px 40px rgba(0, 85, 165, 0.4);
+    }
+
+    button.delete { background: var(--rojo-error); }
+    button.ticket { background: var(--verde-exito); }
+
+    .message {
+      margin-top: 20px;
+      padding: 16px;
+      border-radius: 14px;
+      text-align: center;
+      font-weight: 600;
+      font-size: 15px;
+      display: none;
+    }
+
+    .message.success { background: #d4edda; color: #155724; border: 1px solid #c3e6cb; }
+    .message.error { background: #f8d7da; color: #721c24; border: 1px solid #f5c6cb; }
 
     select {
-      width: 48%; padding: 14px; margin: 8px 1%; border-radius: 12px; border: 2px solid #ddd; font-size: 16px; background: white;
+      width: 48%;
+      padding: 14px;
+      margin: 10px 1%;
+      border-radius: 12px;
+      border: 2px solid #d0e4ff;
+      font-size: 16px;
+      background: white;
+      transition: all 0.3s;
     }
-    #individualTotal { text-align: right; font-size: 24px; font-weight: bold; color: #f59e0b; margin: 20px 0; }
 
-    #ticket { display: none; margin: 30px auto; width: 380px; background: linear-gradient(145deg, #8B0000, #c41b2a); color: white; border-radius: 24px; overflow: hidden; box-shadow: 0 20px 50px rgba(0,0,0,0.6); font-family: 'Bebas Neue', sans-serif; text-align: center; }
-    .ticket-title { background: rgba(0,0,0,0.5); padding: 18px; font-size: 32px; color: #ff6b6b; }
-    .qr-container { background: white; margin: 25px auto; padding: 20px; width: 220px; height: 220px; border-radius: 18px; }
-    #qrCode { width: 180px; height: 180px; margin: 0 auto; }
-    .ticket-code { font-size: 36px; color: var(--gold); letter-spacing: 6px; margin: 20px 0; }
-    .info-row { display: flex; justify-content: space-between; padding: 8px 30px; border-bottom: 1px dashed rgba(255,255,255,0.4); font-size: 17px; }
-    .footer-note { background: rgba(0,0,0,0.4); padding: 18px; font-size: 15px; margin-top: 20px; border-top: 2px dashed rgba(255,255,255,0.3); }
+    select:focus {
+      border-color: var(--azul-institucional);
+      box-shadow: 0 0 0 4px rgba(0, 85, 165, 0.15);
+    }
+
+    #individualTotal {
+      text-align: right;
+      font-size: 24px;
+      font-weight: bold;
+      color: var(--azul-marino);
+      margin: 20px 0;
+    }
+
+    /* TICKET OFICIAL */
+    #ticket {
+      display: none;
+      margin: 30px auto;
+      width: 380px;
+      background: linear-gradient(145deg, var(--azul-marino), var(--azul-institucional));
+      color: white;
+      border-radius: 24px;
+      overflow: hidden;
+      box-shadow: 0 25px 60px rgba(0, 0, 0, 0.6);
+      font-family: 'Bebas Neue', sans-serif;
+      text-align: center;
+    }
+
+    .ticket-title {
+      background: rgba(0, 0, 0, 0.4);
+      padding: 20px;
+      font-size: 34px;
+      color: white;
+      letter-spacing: 2px;
+    }
+
+    .qr-container {
+      background: white;
+      margin: 25px auto;
+      padding: 20px;
+      width: 220px;
+      height: 220px;
+      border-radius: 18px;
+    }
+
+    #qrCode {
+      width: 180px;
+      height: 180px;
+      margin: 0 auto;
+    }
+
+    .ticket-code {
+      font-size: 36px;
+      color: white;
+      letter-spacing: 6px;
+      margin: 20px 0;
+      font-weight: bold;
+    }
+
+    .info-row {
+      display: flex;
+      justify-content: space-between;
+      padding: 10px 30px;
+      border-bottom: 1px dashed rgba(255,255,255,0.3);
+      font-size: 17px;
+    }
+
+    .info-row:last-child { border: none; }
+
+    .footer-note {
+      background: rgba(0, 0, 0, 0.4);
+      padding: 20px;
+      font-size: 15px;
+      margin-top: 20px;
+      border-top: 2px dashed rgba(255,255,255,0.3);
+    }
 
     .download-btn, #backButton {
-      display: block; margin: 20px auto; padding: 16px 40px; background: var(--gold); color: black; border: none; border-radius: 50px; font-weight: bold; font-size: 18px; cursor: pointer; width: fit-content;
+      display: block;
+      margin: 20px auto;
+      padding: 16px 40px;
+      background: white;
+      color: var(--azul-marino);
+      border: 2px solid var(--azul-marino);
+      border-radius: 50px;
+      font-weight: bold;
+      font-size: 18px;
+      cursor: pointer;
+      transition: all 0.3s;
     }
-    #backButton { background: white; color: #c41b2a; border: 2px solid #c41b2a; }
-    #backButton:hover { background: #c41b2a; color: white; }
+
+    .download-btn:hover, #backButton:hover {
+      background: var(--azul-institucional);
+      color: white;
+    }
 
     @media (max-width: 480px) {
       select { width: 100%; margin: 10px 0; }
@@ -83,19 +306,26 @@
 
   <div class="container">
     <div class="header">
+      <img src="uni.png" alt="Universidad Univer Milenium" class="logo">
       <h1>Graduación 2025</h1>
       <p id="welcome">Cargando...</p>
     </div>
 
     <div class="content" id="mainContent">
       <div class="profile">
-        <h3 id="userName">Axel</h3>
+        <h3 id="userName">Alumno</h3>
         <p>Mis boletos comprados</p>
       </div>
 
       <div class="inventory">
-        <div><h3>Boletos Cena</h3><span id="dinnerAvailable">200</span></div>
-        <div><h3>Boletos Ceremonia</h3><span id="ceremonyAvailable">200</span></div>
+        <div>
+          <h3>Boletos Cena</h3>
+          <span id="dinnerAvailable">200</span>
+        </div>
+        <div>
+          <h3>Boletos Ceremonia</h3>
+          <span id="ceremonyAvailable">200</span>
+        </div>
       </div>
 
       <div id="myPurchases">
@@ -147,6 +377,7 @@
       <div id="message" class="message"></div>
     </div>
 
+    <!-- TICKET OFICIAL -->
     <div id="ticket">
       <div class="ticket-title">GRADUACIÓN 2025</div>
       <div class="qr-container"><canvas id="qrCode"></canvas></div>
@@ -167,6 +398,7 @@
     </div>
   </div>
 
+  <!-- TU SCRIPT 100% ORIGINAL (SIN TOCAR NADA) -->
   <script>
     const userNombre = localStorage.getItem('currentUserNombre') || 'Alumno';
     const userMatricula = localStorage.getItem('currentUserMatricula') || '000000';
@@ -182,7 +414,7 @@
 
     const DB_URL = "https://boletos-66dac-default-rtdb.firebaseio.com/";
     const INVENTORY_URL = DB_URL + "inventory.json";
-    const PURCHASES_URL = DB_URL + `users/${userId}/purchases.json`; // Esta es la clave
+    const PURCHASES_URL = DB_URL + `users/${userId}/purchases.json`;
 
     let compras = [];
     let totalCena = 0;
@@ -211,7 +443,6 @@
         document.getElementById('dinnerAvailable').textContent = inventory.dinner || 200;
         document.getElementById('ceremonyAvailable').textContent = inventory.ceremony || 200;
 
-        // Limpiar variables
         compras = [];
         totalCena = 0;
         totalCeremonia = 0;
@@ -224,7 +455,7 @@
           document.getElementById('myPurchases').innerHTML = `
             <div style="background:#d4edda;padding:20px;border-radius:12px;text-align:center;">
               <h3 style="color:#10b981;">¡Ya tienes boletos!</h3>
-              <p><strong>${totalCena} Cena + ${totalCeremonia} Ceremonia</strong></p>
+              <p><strong>\( {totalCena} Cena + \){totalCeremonia} Ceremonia</strong></p>
             </div>
           `;
 
@@ -250,7 +481,6 @@
         const codigo = Math.random().toString(36).substr(2, 9).toUpperCase();
         const compra = { cena, ceremonia, total, codigo, fecha: new Date().toISOString() };
 
-        // Guardar compra
         const res = await fetch(PURCHASES_URL, {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
@@ -259,7 +489,6 @@
 
         if (!res.ok) throw new Error("Error al guardar compra");
 
-        // Actualizar inventario
         const inv = await (await fetch(INVENTORY_URL)).json() || {dinner: 200, ceremony: 200};
         await fetch(INVENTORY_URL, {
           method: 'PATCH',
@@ -269,7 +498,6 @@
           })
         });
 
-        // Recargar todo
         await loadData();
         showMessage('¡Compra realizada con éxito!', 'success');
 
@@ -305,7 +533,7 @@
     document.getElementById('deleteLast').onclick = async () => {
       if (!confirm('¿Eliminar última compra?')) return;
       const ultima = compras[compras.length - 1];
-      await fetch(DB_URL + `users/${userId}/purchases/${ultima.id}.json`, { method: 'DELETE' });
+      await fetch(DB_URL + `users/\( {userId}/purchases/ \){ultima.id}.json`, { method: 'DELETE' });
       const inv = await (await fetch(INVENTORY_URL)).json();
       await fetch(INVENTORY_URL, { method: 'PATCH', body: JSON.stringify({
         dinner: inv.dinner + ultima.cena,
@@ -323,7 +551,7 @@
       document.getElementById('ticketMatricula').textContent = userMatricula;
       document.getElementById('ticketFecha').textContent = fecha;
       document.getElementById('ticketHora').textContent = hora;
-      document.getElementById('ticketBoletos').textContent = `${totalCena} Cena + ${totalCeremonia} Ceremonia`;
+      document.getElementById('ticketBoletos').textContent = `\( {totalCena} Cena + \){totalCeremonia} Ceremonia`;
       document.getElementById('ticketCode').textContent = compra.codigo;
 
       document.getElementById('mainContent').style.display = 'none';
@@ -331,7 +559,7 @@
       document.getElementById('downloadTicket').style.display = 'block';
       document.getElementById('backButton').style.display = 'block';
 
-      const url = `https://ax2004-2003.github.io/Boletos/verificar.html?mat=${userMatricula}&code=${compra.codigo}`;
+      const url = `https://ax2004-2003.github.io/Boletos/verificar.html?mat=\( {userMatricula}&code= \){compra.codigo}`;
       QRCode.toCanvas(document.getElementById('qrCode'), url, { width: 180 });
     }
 
@@ -352,7 +580,6 @@
       setTimeout(() => msg.style.display = 'none', 4000);
     }
 
-    // INICIALIZACIÓN
     calculateTotal();
     loadData();
 
