--- a/index2.html
+++ b/index2.html
@@ -37,13 +37,14 @@
 
     .container { max-width: 500px; width: 100%; background: rgba(255,255,255,0.15); backdrop-filter: blur(20px); border-radius: 28px; overflow: hidden; box-shadow: 0 20px 50px rgba(0,0,0,0.4); }
     
+    /* HEADER CON COLORES INSTITUCIONALES */
     .header { 
       background: linear-gradient(135deg, var(--azul-marino), var(--azul-institucional)); 
       color: white; 
       text-align: center; 
       padding: 50px 20px 40px; 
     }
-    
+
     .logo {
       width: 110px;
       height: auto;
@@ -186,7 +187,7 @@
     </div>
   </div>
 
-  <!-- TU SCRIPT 100% ORIGINAL SIN CAMBIOS -->
+  <!-- TU SCRIPT 100% ORIGINAL, SIN TOCAR NADA -->
   <script>
     const userNombre = localStorage.getItem('currentUserNombre') || 'Alumno';
     const userMatricula = localStorage.getItem('currentUserMatricula') || '000000';
